modiifed task 3 cv

--- a/Task3-Inter_annotator_agreement.ipynb
+++ b/Task3-Inter_annotator_agreement.ipynb
@@ -575,28 +575,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For CV, we have the dataframe with the annotator's choices (Truck or No Truck) encoded as 0 and 1 respectively"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fliess Kappa: 0.8611111111111109\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\romit\\AppData\\Local\\Temp\\ipykernel_31308\\3636945879.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\romit\\AppData\\Local\\Temp\\ipykernel_31308\\3203798083.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df = df.replace({'Trucks': 0, 'No Trucks': 1})\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[78], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([annotations1, annotations2, annotations3], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      7\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mreplace({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrucks\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo Trucks\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m})\n\u001b[1;32m----> 9\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[43mfleiss_kappa\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmethod\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfleiss\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFliess Kappa:\u001b[39m\u001b[38;5;124m\"\u001b[39m, k)\n",
-      "File \u001b[1;32mc:\\Users\\romit\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\statsmodels\\stats\\inter_rater.py:252\u001b[0m, in \u001b[0;36mfleiss_kappa\u001b[1;34m(table, method)\u001b[0m\n\u001b[0;32m    250\u001b[0m n_rat \u001b[38;5;241m=\u001b[39m n_rater\u001b[38;5;241m.\u001b[39mmax()\n\u001b[0;32m    251\u001b[0m \u001b[38;5;66;03m#assume fully ranked\u001b[39;00m\n\u001b[1;32m--> 252\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m n_total \u001b[38;5;241m==\u001b[39m n_sub \u001b[38;5;241m*\u001b[39m n_rat\n\u001b[0;32m    254\u001b[0m \u001b[38;5;66;03m#marginal frequency  of categories\u001b[39;00m\n\u001b[0;32m    255\u001b[0m p_cat \u001b[38;5;241m=\u001b[39m table\u001b[38;5;241m.\u001b[39msum(\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m/\u001b[39m n_total\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -607,7 +609,31 @@
     "annotations3 = pd.read_csv(\"CV_annotation_480_499_Soham.csv\")[\"annotator_choice\"]\n",
     "\n",
     "df = pd.concat([annotations1, annotations2, annotations3], axis=1)\n",
-    "df = df.replace({'Trucks': 0, 'No Trucks': 1})\n"
+    "df = df.replace({'Trucks': 0, 'No Trucks': 1})\n",
+    "\n",
+    "df_new = []\n",
+    "for img in df.to_numpy():\n",
+    "  count_trucks = 0\n",
+    "  count_no_trucks = 0\n",
+    "  for t in range(3):\n",
+    "    if img[t] == 0:\n",
+    "      count_trucks += 1\n",
+    "    else:\n",
+    "      count_no_trucks += 1\n",
+    "\n",
+    "  df_new.append([count_trucks, count_no_trucks])\n",
+    "\n",
+    "df = pd.DataFrame(df_new)\n",
+    "\n",
+    "k = fleiss_kappa(df.to_numpy(), method='fleiss')\n",
+    "print(\"Fliess Kappa:\", k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> We obtain a fleiss kappa valyue of 0.86, which means therw is almost perfect agreement between the annotators of this data"
    ]
   }
  ],
