modiifed task 3 cv

--- a/Task3-Inter_annotator_agreement.ipynb
+++ b/Task3-Inter_annotator_agreement.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -615,8 +615,8 @@
     "for img in df.to_numpy():\n",
     "  count_trucks = 0\n",
     "  count_no_trucks = 0\n",
-    "  for t in range(3):\n",
-    "    if img[t] == 0:\n",
+    "  for entry in range(3):\n",
+    "    if img[entry] == 0:\n",
     "      count_trucks += 1\n",
     "    else:\n",
     "      count_no_trucks += 1\n",
